frontend-pos/src/app/features/products/category-list/category-list.component.scss
@import "../../../styles/colors";

.list-category-container {
  display: flex;
  flex-direction: row;
  width: 100%;
  height: 100%;
  align-items: center;
  overflow-y: hidden;

  span.customs-categories {
    display: inherit;
    overflow-x: auto;
    height: inherit;

    &::-webkit-scrollbar {
      display: none;
    }
  }
}

button.category-button {
  color: $green-medium;
  min-width: fit-content;
  background-color: $white;
  margin: 0 5px;
  box-shadow: 1px 1px 5px 0 $gray-lighter;
  font-weight: bold;

  &.active, &.all {
    color: $white;
    background-color: $green-medium;
  }

  &.all {
    height: 100%;
  }
}

